@@ -134,7 +134,11 @@ include_HEADERS = \
 #         Interactive front-end and back-ends           #
 #########################################################
 
-bin_PROGRAMS = TDBSCAN_FE.bin TDBSCAN_BE.bin TDBSCAN_FE_nobe.bin TDBSCAN_BE_nobe.bin
+bin_PROGRAMS = TDBSCAN_FE.bin TDBSCAN_BE.bin 
+
+if HAVE_MPI
+bin_PROGRAMS += TDBSCAN_FE_mpi.bin TDBSCAN_BE_mpi.bin
+endif
 
 TDBSCAN_FE_bin_SOURCES  = \
   TDBSCAN_FE.cpp \
@@ -149,16 +153,19 @@ TDBSCAN_BE_bin_CPPFLAGS = @SYNAPSE_BE_CPPFLAGS@ $(CLUSTERING_FULL_CPPFLAGS)
 TDBSCAN_BE_bin_LDFLAGS  = @SYNAPSE_LIBTOOL_RPATH@ @CLUSTERING_LDFLAGS@
 TDBSCAN_BE_bin_LDADD    = libTDBSCAN-be-offline.la @SYNAPSE_BE_LIBS@ @CLUSTERING_LIBS@
 
-TDBSCAN_FE_nobe_bin_SOURCES  = \
+if HAVE_MPI
+
+TDBSCAN_FE_mpi_bin_SOURCES  = \
   TDBSCAN_FE.cpp \
   TDBSCAN_FE.h
-TDBSCAN_FE_nobe_bin_CPPFLAGS = @SYNAPSE_FE_CPPFLAGS@ $(CLUSTERING_FULL_CPPFLAGS) -DBACKEND_ATTACH
-TDBSCAN_FE_nobe_bin_LDFLAGS  = @SYNAPSE_LIBTOOL_RPATH@ @CLUSTERING_LDFLAGS@
-TDBSCAN_FE_nobe_bin_LDADD    = libTDBSCAN-fe.la @SYNAPSE_FE_LIBS@ @CLUSTERING_LIBS@
+TDBSCAN_FE_mpi_bin_CPPFLAGS = @SYNAPSE_FE_CPPFLAGS@ $(CLUSTERING_FULL_CPPFLAGS) -DBACKEND_ATTACH
+TDBSCAN_FE_mpi_bin_LDFLAGS  = @SYNAPSE_LIBTOOL_RPATH@ @CLUSTERING_LDFLAGS@
+TDBSCAN_FE_mpi_bin_LDADD    = libTDBSCAN-fe.la @SYNAPSE_FE_LIBS@ @CLUSTERING_LIBS@
 
-TDBSCAN_BE_nobe_bin_SOURCES  = \
+TDBSCAN_BE_mpi_bin_SOURCES  = \
   TDBSCAN_BE.cpp
-TDBSCAN_BE_nobe_bin_CPPFLAGS = @SYNAPSE_BE_CPPFLAGS@ $(CLUSTERING_FULL_CPPFLAGS) -DBACKEND_ATTACH -I/apps/OPENMPI/1.8.1-mellanox/include
-TDBSCAN_BE_nobe_bin_LDFLAGS  = @SYNAPSE_LIBTOOL_RPATH@ @CLUSTERING_LDFLAGS@ -L/apps/OPENMPI/1.8.1-mellanox/lib -lmpi_cxx
-TDBSCAN_BE_nobe_bin_LDADD    = libTDBSCAN-be-offline.la @SYNAPSE_BE_LIBS@ @CLUSTERING_LIBS@
+TDBSCAN_BE_mpi_bin_CPPFLAGS = @SYNAPSE_BE_CPPFLAGS@ $(CLUSTERING_FULL_CPPFLAGS) -DBACKEND_ATTACH 
+TDBSCAN_BE_mpi_bin_LDFLAGS  = @SYNAPSE_LIBTOOL_RPATH@ @CLUSTERING_LDFLAGS@ 
+TDBSCAN_BE_mpi_bin_LDADD    = libTDBSCAN-be-offline.la @SYNAPSE_BE_LIBS@ @CLUSTERING_LIBS@
 
+endif
